force-app/main/default/objects/Delivery_Estimate_Feedback__c/Delivery_Estimate_Feedback__c.object-meta.xml
<CustomObject>
    <label>Delivery Estimate Feedback</label>
    <nameField>
        <displayFormat>DEF-{00000}</displayFormat>
        <label>Delivery Estimate Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Estimate Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>