force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/Delivery_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Estimate__c</fullName>
    <label>Delivery Estimate</label>
    <referenceTo>Delivery_Estimate__c</referenceTo>
    <relationshipLabel>Delivery Estimate Feedbacks</relationshipLabel>
    <relationshipName>Delivery_Estimate_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>