force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/Delivery_Estimate_Creator_Email__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Estimate_Creator_Email__c</fullName>
    <label>Delivery Estimate Creator Email</label>
    <type>Email</type>
</CustomField>