force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/District_Manger_Email__c.field-meta.xml
<CustomField>
    <fullName>District_Manger_Email__c</fullName>
    <label>District Manger Email</label>
    <type>Email</type>
</CustomField>