force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>IF(  CreatedBy.Id  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>