force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/Minimum_Delivery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Delivery_Amount__c</fullName>
    <label>Minimum Delivery Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>