force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/Non_MDO__c.field-meta.xml
<CustomField>
    <fullName>Non_MDO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-MDO</label>
    <type>Checkbox</type>
</CustomField>