force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/Operations_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager_Email__c</fullName>
    <label>Operations Manager Email</label>
    <type>Email</type>
</CustomField>