force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/Recommended_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Delivery__c</fullName>
    <label>Recommended Delivery Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>