force-app/main/default/objects/Delivery_Estimate_Feedback__c/fields/Total_Number_of_Trucks__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Trucks__c</fullName>
    <label>Total Number of Trucks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>