force-app/main/default/objects/Delivery_Estimate_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Minimum_Delivery_Amount__c</columns>
    <columns>Recommended_Delivery__c</columns>
    <columns>Total_Number_of_Trucks__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>