force-app/main/default/objects/Delivery_Estimate_Feedback__c/listViews/My_Feedback_s_Submitted.listView-meta.xml
<ListView>
    <fullName>My_Feedback_s_Submitted</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Minimum_Delivery_Amount__c</columns>
    <columns>Recommended_Delivery__c</columns>
    <columns>Total_Number_of_Trucks__c</columns>
    <columns>Delivery_Estimate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Feedback&#39;s Submitted</label>
</ListView>